--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	This isn't what it means to be a mother. You care for, nurture, teach, and raise a human being.</p>
 	
 	
-	<img class="imageright" src="images/angiebaby.jpg" width="150" height="150">
+	<img class="imageright" src="images/angiebaby.JPG" width="150" height="150">
 	
 	<p id="firstparagraph">Angela was born in Omaha and raised in Wahoo, Nebraska. 
 	She grew up with her mother, Margaret, her father, Claude, and her 13 brothers and sisters. 
