--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</header>
 	
 	<p class="definition"><span class="mother">Mother</span> (<span class="noun">noun</span>): a female parent</p>
-	<p id="underdef">This is how a mother is defined in the dictionary. However, I believe it means so much more.
+	<p class="underdef">This is how a mother is defined in the dictionary. However, I believe it means so much more.
 	Whether you are a single mother or not, your job doesn't stop at bringing life into the world.
 	This isn't what it means to be a mother. You care for, nurture, teach, and raise a human being.</p>
 	
@@ -38,7 +38,7 @@
 	By the age of 6 she was balancing the family checkbook and keeping track of finances.
 	</p>
 	
-	<img class="imageleft" src="images/angieteen.JPG" width="150" height="150">
+	<img class="imageleft" src="images/angieteen.jpg" width="150" height="150">
 	
 	<p id="secondparagraph">
 	After graduating High School at 18 years old, she married and moved away from home.
@@ -63,7 +63,7 @@
 	She graduated with her first degree in Business and even went back to earn 2 master's degrees in clinical counseling.
 	</p>
 	
-	<img class="imageleft" src="images/angiewedding.JPG" width="150" height="150">
+	<img class="imageleft" src="images/angiewedding.jpg" width="150" height="150">
 	
 	<p id="fifthparagraph">
 	In 2013, she married a native Kansas man, William McClain. 
@@ -82,13 +82,15 @@
 	
 	<p>
 	<span class="mother">Mother</span> (<span class="noun">noun</span>): Someone who is strong, loving, determined, supportive, and resilient, who shelters and guides her children.<br>
-	This is what I feel it means to be a mother.
+	</p>
+	<p class="underdef">
+	This is my definition of what it means to be a mother. 
 	</p>
 
 	</div>
 	
 	<footer>
-	<img src="images/angieflowers.JPG" width="80" height="80">
+	<img src="images/angieflowers.jpg" width="80" height="80">
 	<p>
 	<span id="bold">Angela Peavy-McClain</span> <span id="italic">M.S., LCPC, LCAC </span><br>
 	<a href="http://firmfoundations-counseling.com/13-2/about/" target="_blank">Firm Foundations Counseling Inc.</a>
