--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<!--Ashleigh Lyman-->
-	<!--BioSite Week 5-->
+	<!--BioSite Week 6-->
 	
 <head>
 
@@ -38,7 +38,7 @@
 	By the age of 6 she was balancing the family checkbook and keeping track of finances.
 	</p>
 	
-	<img class="imageleft" src="images/angieteen.jpg" width="150" height="150">
+	<img class="imageleft" src="images/angieteen.JPG" width="150" height="150">
 	
 	<p id="secondparagraph">
 	After graduating High School at 18 years old, she married and moved away from home.
@@ -63,7 +63,7 @@
 	She graduated with her first degree in Business and even went back to earn 2 master's degrees in clinical counseling.
 	</p>
 	
-	<img class="imageleft" src="images/angiewedding.jpg" width="150" height="150">
+	<img class="imageleft" src="images/angiewedding.JPG" width="150" height="150">
 	
 	<p id="fifthparagraph">
 	In 2013, she married a native Kansas man, William McClain. 
@@ -90,7 +90,7 @@
 	</div>
 	
 	<footer>
-	<img src="images/angieflowers.jpg" width="80" height="80">
+	<img src="images/angieflowers.JPG" width="80" height="80">
 	<p>
 	<span id="bold">Angela Peavy-McClain</span> <span id="italic">M.S., LCPC, LCAC </span><br>
 	<a href="http://firmfoundations-counseling.com/13-2/about/" target="_blank">Firm Foundations Counseling Inc.</a>
