--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<!--Ashleigh Lyman-->
-	<!--BioSite Week 6-->
+	<!--BioSite Assignment 7.3-->
+	<!--Index home page-->
 	
 <head>
 
@@ -11,19 +12,22 @@
 	
 	<link rel="stylesheet" type="text/css" href="style.css">
 	
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Permanent+Marker|Raleway|Sofia" rel="stylesheet">
+
 
 </head>
 
 <body>
 
-	
+<!--Start of container section. Background color is cream-->
 
 	<div id="container">
+	
 	<header>
 		<h1>Angela Peavy-McClain</h1>
 	</header>
 	
-	<p class="definition"><span class="mother">Mother</span> (<span class="noun">noun</span>): a female parent</p>
+	<p class="definition"><span class="mother">Mother</span> (<span class="noun">noun</span>)<b>:</b> a female parent</p>
 	<p class="underdef">This is how a mother is defined in the dictionary. However, I believe it means so much more.
 	Whether you are a single mother or not, your job doesn't stop at bringing life into the world.
 	This isn't what it means to be a mother. You care for, nurture, teach, and raise a human being.</p>
@@ -86,15 +90,17 @@
 	<p class="underdef">
 	This is my definition of what it means to be a mother. 
 	</p>
-
 	</div>
-	
+<!--End of container section-->
+
+<!--Start of footer. Background color is same as container-->
 	<footer>
 	<img src="images/angieflowers.JPG" width="80" height="80">
 	<p>
 	<span id="bold">Angela Peavy-McClain</span> <span id="italic">M.S., LCPC, LCAC </span><br>
 	<a href="http://firmfoundations-counseling.com/13-2/about/" target="_blank">Firm Foundations Counseling Inc.</a>
 	</footer>
+<!--End of footer section-->
 	
 </body>
 </html>
