Changed font, added display change format to head

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 	
 	<link rel="stylesheet" type="text/css" href="style.css">
 	
-	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Permanent+Marker|Raleway|Sofia" rel="stylesheet">
+	<meta charset="utf-8">
+	<meta name="viewport"
+	content="width=device-width, initial-scale=1.0">
+	
+
+	
+<link href="https://fonts.googleapis.com/css?family=Inconsolata|Indie+Flower|Merriweather|Special+Elite&display=swap" rel="stylesheet">
 
 
 </head>
@@ -27,13 +33,13 @@
 		<h1>Angela Peavy-McClain</h1>
 	</header>
 	
-	<p class="definition"><span class="mother">Mother</span> (<span class="noun">noun</span>)<b>:</b> a female parent</p>
+	<p class="definition"><span class="mother">Mother</span> (<span class="noun">noun</span> )<strong>:</strong> a female parent</p>
 	<p class="underdef">This is how a mother is defined in the dictionary. However, I believe it means so much more.
 	Whether you are a single mother or not, your job doesn't stop at bringing life into the world.
 	This isn't what it means to be a mother. You care for, nurture, teach, and raise a human being.</p>
 	
 	
-	<img class="imageright" src="images/angiebaby.JPG" width="150" height="150">
+	<img class="imageright" src="images/angiebaby.JPG" alt="Angela as a baby" width="150" height="150">
 	
 	<p id="firstparagraph">Angela was born in Omaha and raised in Wahoo, Nebraska. 
 	She grew up with her mother, Margaret, her father, Claude, and her 13 brothers and sisters. 
@@ -42,7 +48,7 @@
 	By the age of 6 she was balancing the family checkbook and keeping track of finances.
 	</p>
 	
-	<img class="imageleft" src="images/angieteen.JPG" width="150" height="150">
+	<img class="imageleft" src="images/angieteen.JPG" alt="Angela as a teen" width="150" height="150">
 	
 	<p id="secondparagraph">
 	After graduating High School at 18 years old, she married and moved away from home.
@@ -59,7 +65,7 @@
 	After years of getting by, she decided to go to back to school and better her future not just for her children, but also for herself.
 	</p>
 	
-	<img class="imageright" src="images/angiehenry1.jpg" width="150" height="150">
+	<img class="imageright" src="images/angiehenry1.jpg" alt="Angela and grandson" width="150" height="150">
 	
 	<p id="fourthparagraph">
 	After quitting her full-time job at Hy-Vee that was supporting her and her kids, she started working towards a Business Administration/Management degree. 
@@ -67,7 +73,7 @@
 	She graduated with her first degree in Business and even went back to earn 2 master's degrees in clinical counseling.
 	</p>
 	
-	<img class="imageleft" src="images/angiewedding.JPG" width="150" height="150">
+	<img class="imageleft" src="images/angiewedding.JPG" alt="Angela and Bill married" width="150" height="150">
 	
 	<p id="fifthparagraph">
 	In 2013, she married a native Kansas man, William McClain. 
@@ -85,7 +91,7 @@
 	</p>
 	
 	<p>
-	<span class="mother">Mother</span> (<span class="noun">noun</span>): Someone who is strong, loving, determined, supportive, and resilient, who shelters and guides her children.<br>
+	<span class="mother">Mother</span> (<span class="noun">noun</span> )<strong>: </strong> Someone who is strong, loving, determined, supportive, and resilient, who shelters and guides her children.<br>
 	</p>
 	<p class="underdef">
 	This is my definition of what it means to be a mother. 
@@ -95,7 +101,7 @@
 
 <!--Start of footer. Background color is same as container-->
 	<footer>
-	<img src="images/angieflowers.JPG" width="80" height="80">
+	<img src="images/angieflowers.JPG" alt="Angela holding flowers" width="80" height="80">
 	<p>
 	<span id="bold">Angela Peavy-McClain</span> <span id="italic">M.S., LCPC, LCAC </span><br>
 	<a href="http://firmfoundations-counseling.com/13-2/about/" target="_blank">Firm Foundations Counseling Inc.</a>
