--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 	<meta name="viewport"
 	content="width=device-width, initial-scale=1.0">
 	
-
-	
-<link href="https://fonts.googleapis.com/css?family=Inconsolata|Indie+Flower|Merriweather|Special+Elite&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Merriweather|Special+Elite&display=swap" rel="stylesheet">
 
 
 </head>
